crates/rome_formatter/tests/specs/prettier/typescript/compiler/modifiersOnInterfaceIndexSignature1.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 119
expression: modifiersOnInterfaceIndexSignature1.ts

---
# Input
```js
interface I {
  public [a: string]: number;
}
```

# Output
```js
interface I { public [a: string]: number; }

```

# Errors
```
error[SyntaxError]: index signature members cannot be public
  ┌─ modifiersOnInterfaceIndexSignature1.ts:2:3
  │
2 │   public [a: string]: number;
  │   ^^^^^^


```


